# eisp

./: pyproject.toml
.github/workflows/: ci-lint-fmt.yml  ci-test.yml
eisp/: __init__.py  ensemble.py  ex_mnist.py  feature_extraction.py  proxy_tasks.py  test.py
examples/: ex_mnist.py  ex_mnist_combinatorics.py  ex_mnist_k_fold.py  ex_mnist_train_test.py  ex_mnist_visualizations.py
src/eisp/: ensemble.py  proxy_tasks.py  visualization.py
tests/: test.py  test_feature_extraction.py  test_tsne.py  test_umap.py
