[project]
name = "eisp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.2",
    "numpy>=2.3.2",
    "optuna>=4.5.0",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "xgboost>=3.0.5",
]

[dependency-groups]
dev = ["pytest>=8.4.2"]
